pkgdatadir = $(datadir)/scuff-em/examples/MicrostripDevices

geodir   = $(pkgdatadir)/geoFiles
geo_DATA = geoFiles/Rectangle.geo       		\
           geoFiles/EdgeFedAntenna.geo			\
           geoFiles/PointFedAntenna.geo

mshdir   = $(pkgdatadir)/mshFiles
msh_DATA = mshFiles/CPWCenter_Coarse.msh 		\
           mshFiles/CPWCenter_Medium.msh 		\
           mshFiles/CPWCenter_Fine.msh  		\
           mshFiles/CPWFlank_Coarse.msh			\
           mshFiles/CPWFlank_Medium.msh                 \
           mshFiles/CPWFlank_Fine.msh                 	\
           mshFiles/EFAntenna_L0_Coarse.msh       	\
           mshFiles/EFAntenna_L0_Fine.msh         	\
           mshFiles/EFAntenna_L8_Coarse.msh       	\
           mshFiles/EFAntenna_L8_Fine.msh		\
           mshFiles/PFAntenna_Coarse.msh		\
           mshFiles/PFAntenna_Fine.msh      

scuffgeodir   = $(pkgdatadir)/scuffgeoFiles
scuffgeo_DATA = scuffgeoFiles/CPW_Coarse.scuffgeo		\
                scuffgeoFiles/CPW_Medium.scuffgeo		\
                scuffgeoFiles/CPW_Fine.scuffgeo			\
                scuffgeoFiles/EFAntenna_L0_Coarse.scuffgeo	\
                scuffgeoFiles/EFAntenna_L0_Fine.scuffgeo	\
                scuffgeoFiles/EFAntenna_L8_Coarse.scuffgeo	\
                scuffgeoFiles/EFAntenna_L8_Fine.scuffgeo	\
                scuffgeoFiles/PFAntennas_Coarse.scuffgeo	\
                scuffgeoFiles/PFAntennas_Fine.scuffgeo

portdir   = $(pkgdatadir)/portFiles
port_DATA = portFiles/CPW.ports 				\
            portFiles/EFAntenna.ports				\
            portFiles/PFAntennas.ports 

transdir   = $(pkgdatadir)/transFiles
trans_DATA = transFiles/EPlane.trans				\
             transFiles/HPlane.trans

shdir    = $(pkgdatadir)/bashFiles
sh_DATA  = bashFiles/setupSCUFF.sh 				\
           bashFiles/EFAntenna.sh	

pydir    = $(pkgdatadir)/pythonFiles
py_DATA  = pythonFiles/setupSCUFF.py				\
           pythonFiles/EFAntenna.py				\
           pythonFiles/CPW.py      
