pkgdatadir = $(datadir)/scuff-em/examples/NanorodResonantModes

EXTRA_DIST = ComputeNanorodModes

geodir   = $(pkgdatadir)/geoFiles
geo_DATA = geoFiles/Nanorod.geo

mshdir   = $(pkgdatadir)/mshFiles
msh_DATA = mshFiles/Nanorod_648.msh			\
           mshFiles/Nanorod_1860.msh			\
           mshFiles/Nanorod_3612.msh

scuffgeodir   = $(pkgdatadir)/scuffgeoFiles
scuffgeo_DATA = scuffgeoFiles/GoldNanorod_648.scuffgeo 		\
                scuffgeoFiles/GoldNanorod_1860.scuffgeo 	\
                scuffgeoFiles/GoldNanorod_3612.scuffgeo 	\
                scuffgeoFiles/GoldNanorods_648.scuffgeo 	\
                scuffgeoFiles/GoldNanorods_1860.scuffgeo 	\
                scuffgeoFiles/GoldNanorods_3612.scuffgeo
