EXTRA_DIST=				                         \
 MakeScreenMesh MakeTrapMesh MyEPFile Phase1.Excitations         \
 Phase1.RunScript Phase2.Excitations Phase2.RunScript Screen.geo \
 Screen.msh Screen.trans Trap_4_Improved.scuffgeo Trap_4.msh     \
 Trap_4.scuffgeo Trap.geo

pkgdatadir = $(datadir)/scuff-em/examples/PaulTrap
nodist_pkgdata_DATA = ${EXTRA_DIST}
