EXTRA_DIST =		\
 PFTUnitCell.geo	\
 PFTUnitCell_398.msh	\
 PFTUnitCell_794.msh	\
 PFT_398.scuffgeo	\
 PFT_794.scuffgeo	\
 PFT_394.args		\
 PFT_794.args		\
 OmegaFile.PFT		\
 PFSUnitCell.geo	\
 PFSUnitCell_340.msh   	\
 PFSUnitCell_1491.msh  	\
 PFS_340.scuffgeo	\
 PFS_1491.scuffgeo	\
 PFS_340.args		\
 PFS_1491.args		\
 OmegaFile.PFS

pkgdatadir = $(datadir)/scuff-em/examples/PerforatedThinFilm
nodist_pkgdata_DATA = ${EXTRA_DIST}
