EXTRA_DIST =		\
 PFTUnitCell.geo	\
 PFTUnitCell_794.msh	\
 PFT_794.scuffgeo	\
 PFT_794.args		\
 PFTUnitCell_1702.msh	\
 PFT_1702.scuffgeo	\
 PFT_1702.args		\
 OmegaFile.PFT		\
 PFSUnitCell.geo	\
 PFSUnitCell_340.msh   	\
 PFSUnitCell_1491.msh  	\
 PFS_340.scuffgeo	\
 PFS_1491.scuffgeo	\
 PFS_340.args		\
 PFS_1491.args		\
 OmegaFile.PFS

pkgdatadir = $(datadir)/scuff-em/examples/PerforatedThinFilm
nodist_pkgdata_DATA = ${EXTRA_DIST}
