EXTRA_DIST=				\
 KrugerFormulas.jl			\
 OmegaFile				\
 Plotter.gp				\
 SiO2Sphere_501.scuffgeo		\
 SiO2Spheres_1479.scuffgeo		\
 SiO2Spheres_501.scuffgeo		\
 Spheres.trans  			\
 Sphere_1479.msh			\
 Sphere_501.msh				\
 Sphere.geo

pkgdatadir = $(datadir)/scuff-em/examples/SiO2Spheres
nodist_pkgdata_DATA = ${EXTRA_DIST}
