EXTRA_DIST=				\
 Beams.trans				\
 RectangularBeamUnitCell_144.msh	\
 RectangularBeamUnitCell.geo		\
 SiliconBeams_144.scuffgeo		\
 RoundedBeamUnitCell_192.msh		\
 RoundedBeamUnitCell.geo		\
 SiliconBeams_192.scuffgeo

pkgdatadir = $(datadir)/scuff-em/examples/SiliconBeams
nodist_pkgdata_DATA = ${EXTRA_DIST}
